Fix media queries

--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
     <h3 class="title-text">Methods I use in my practice</h3>
 
     <div class="row kundalini">
-         <div class="col-sm-12 col-md-6  col-lg-4 ">
+         <div class="col-sm-12 col-md-6  col-lg-4 col-xl-2">
              <img src="assets/images/yin.jpg" height="250" width="200" class="yoga-img" alt="A woman practicing yoga">
        </div>
-         <div class="col-12 col-sm-12 col-md-5 col-lg-7  yoga-text">
+         <div class="col-12 col-sm-12 col-md-5 col-lg-7 col-xl-9 yoga-text">
             <h5>Kundalini Yoga</h5>
             <br/>
                  <p>The ancient yoga practice focuses on breath and asana (postures) along with chanting, meditation, and singing.
@@ -172,10 +172,10 @@
     </div>  
 
       <div class="row">
-        <div class="col-12 col-md-6  col-lg-4 ">
+        <div class="col-12 col-md-6  col-lg-4 col-xl-2">
               <img src="assets/images/feet.jpg" height="250" width="200" class="yoga-img" alt="Feet of the people in yoga class">
         </div>
-        <div class="col-12 col-md-5 col-lg-7 yoga-text">
+        <div class="col-12 col-md-5 col-lg-7 col-xl-9 yoga-text">
             <h5>Yin Yoga</h5>
             <br/>
                 <p>
@@ -188,10 +188,10 @@
     </div>  
 
       <div class="row">
-        <div class="col-12 col-md-6 d-lg-inline-block col-lg-4 ">
+        <div class="col-12 col-md-6 d-lg-inline-block col-lg-4 col-xl-2">
            <img src="assets/images/healing.jpg" height="250" width="200" class="yoga-img" alt="A woman lying down while a reiki healer has his hands around her head">
         </div>
-        <div class="col-12 col-md-5 col-lg-7  yoga-text">
+        <div class="col-12 col-md-5 col-lg-7 col-xl-9 yoga-text">
             <h5>Reiki</h5>
             <br/>
                 <p>
@@ -205,10 +205,10 @@
     </div>
 
      <div class="row">
-        <div class="col-12 col-md-6  col-lg-4 ">
+        <div class="col-12 col-md-6  col-lg-4 col-xl-2">
            <img src="assets/images/breathe.png" height="250" width="200" class="yoga-img" alt="A woman with her eyes closed enjoying the breathwork ceremony">
         </div>
-        <div class="col-12 col-md-5 col-lg-7  yoga-text">
+        <div class="col-12 col-md-5 col-lg-7 col-xl-9 yoga-text">
             <h5>Shamanic Breathwork</h5>
             <br/>
                 <p>
