--- a/what-i-do.html
+++ b/what-i-do.html
@@ -77,12 +77,9 @@
 
 <!-- ======================= Kundalini section ================================================================== -->
 
-   <section class="container-fluid kundalini-container">
-   <h5 class="yoga-heading">Kundalini Yoga</h5>
+<h5 class="yoga-heading">Kundalini Yoga</h5>
    <h6 id="yogi">as taught by Yogi Bhajan</h6>
-   <div class="row">
-      <div class="col-12">
-        <div class="quote-text">
+<div class="quote-text">
           <p>
             <i>
                "When the Divine in you, and the human in you are in parallel unisonness, then you are in the
@@ -93,10 +90,9 @@
          </p>
             - Yogi Bhajan -
         </div>
-      </div>
-    </div>
-        <div class="row">
-           <div class="col-12 col-md-6 col-lg-7 description-text">
+   <section class="container-fluid kundalini-container">
+    <div class="row">
+        <div class="col-12 col-md-6 col-lg-7 col-xl-7 description-text">
           <p>
             Kundalini Yoga is a place of transformation, is not to be taken lightly. It is like an express train that shakes
             and wakes you up! We awaken the energy of consciousness, to practice in a way that sheds light on our self-imposed 
@@ -118,15 +114,15 @@
             just come as you are! Welcome to the journey!
         </p>
         </div>
-        <div class="col-12 col-md-5 col-lg-5 kundalini-img">
+        <div class="col-12 col-md-5 col-lg-5 col-xl-3 kundalini-img">
             <img class="img-fluid" src="assets/images/river2.jpg" alt="A woman meditating beside the river" />
         </div>
-        <button type="submit" class="btn btn-secondary btn-class-kundalini" data-toggle="modal" data-target="#bookClassModal">
-            Book Class
-          </button>
+        
       </div>
    </section>
-
+<button type="submit" class="btn btn-secondary btn-class-kundalini" data-toggle="modal" data-target="#bookClassModal">
+            Book Class
+          </button>
     <!-- ======================= End Kundalini section ============================================================= -->
 
 <hr class="hr-large">
