Add newsletter to index.html

--- a/gallery.html
+++ b/gallery.html
@@ -14,12 +14,6 @@
 </head>
 
 <body>
-    <!-- === Page Border === -->
-    <div id="left"></div>
-    <div id="right"></div>
-    <div id="top"></div>
-    <!-- === End Page Border === -->
-
     <header>
 
         <!-- ==================== Navigation Bar ================================================================== -->
@@ -104,7 +98,7 @@
                 <img src="assets/images/pose1.jpg" alt="A woman in a standing yoga pose in front of a monument" />
             </div>
             <div class="col-6 col-md-3">
-                <img src="assets/images/pose.jpg" alt="A woman in nature doing a standing yoga pose" />
+                <img src="assets/images/pose.jpg" alt="A woman in nature in a standing yoga pose" />
             </div>
             <div class="col-6 col-md-3">
                 <img src="assets/images/class.jpg" alt="People meditating in yoga class" />
@@ -119,7 +113,7 @@
                 <img src="assets/images/ana-bnw.jpg" alt="Black and white portrait of a woman" />
             </div>
             <div class="col-6 col-md-3">
-                <img src="assets/images/cobra.png" alt="a woman doing a cobra pose in nature" />
+                <img src="assets/images/cobra.png" alt="A woman doing a cobra pose in nature" />
             </div>
             <div class="col-6 col-md-3">
                 <img src="assets/images/namaste.png" alt="A woman in red dress meditating" />
