--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     with, and facilitate, different healing arts (Reiki, Shamanic
                     Breathwork and Sound Healing)...<br /><br />
                     I look forward to meeting you <br /><br />
-                    Sat Nam <i class="fas fa-praying-hands"></i>
+                    Sat Nam 
                 </h5>
                 <br />
             </div>
@@ -222,7 +222,7 @@
             <p>
                 We use the breath as a tool to go into expanded states. The breath has the ability to alter your
                 consciousness,
-                calm your physical body and still the mental chatter of your mind. We do this through Breath, Music, &
+                calm your physical body and still the mental chatter of your mind. We do this through Breath, Music and
                 Movement.
                 Within each one of us resides an inner Shaman, our inner healer, a higher consciousness and wisdom that
                 knows how
@@ -251,7 +251,7 @@
 
     <footer class="container-fluid">
         <div class="row">
-            <div class="col-12 col-md-6 contact-heading">
+            <div class="col-12 col-md-6 col-lg-4 contact-heading">
                 <h4>Contact me:</h4>
                 <h5><i class="fa fa-envelope"></i><a href="contact.html"> harpreet@elem.com</a>
                 </h5>
@@ -260,7 +260,14 @@
                 <h5><i class="fa fa-instagram"></i><a href="instagram.com"> @eleventh_embodiment</a>
                 </h5>
             </div>
-            <div class="col-12 col-md-6 follow-heading">
+            <div class="col-12 col-md-6 col-lg-4 newsletter-heading">
+                <h4>Receive a FREE private session of your choice when you sign up for my newsletter!</h4>
+                <form><input type="email" placeholder="Enter your e-mail">
+                      <button type="submit">Send</button>
+                </form>
+            </div>   
+
+            <div class="col-12 col-md-6 col-lg-4 follow-heading">
                 <h4>Follow Me:</h4>
                 <ul class="social-media">
                     <li>
