--- a/what-i-do.html
+++ b/what-i-do.html
@@ -14,10 +14,6 @@
 </head>
 
 <body>
-    <div id="left"></div>
-    <div id="right"></div>
-    <div id="top"></div>
-
     <header>
         <!-- ==============Navigation Bar =============================================================== -->
 
@@ -104,7 +100,8 @@
             </div>
         </div>
     </div>
-    <section class="container-fluid kundalini-container">
+
+    <div class="container-fluid kundalini-container">
         <div class="row">
             <div class="col-12 col-sm-10 col-md-11 col-lg-6 col-xl-7 description-text">
                 <p>
@@ -144,7 +141,7 @@
             </div>
 
         </div>
-    </section>
+    </div>
     <button type="submit" class="btn btn-secondary btn-class-kundalini" data-toggle="modal"
         data-target="#bookClassModal">
         Book Class
