--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
 
     <footer class="container-fluid">
         <div class="row">
-            <div class="col-12 col-md-6 contact-heading">
+            <div class="col-12 col-md-12 col-lg-4 contact-heading">
                 <h4>Contact me:</h4>
                 <h5><i class="fa fa-envelope"></i><a href="contact.html"> harpreet@elem.com</a>
                 </h5>
@@ -91,7 +91,14 @@
                 <h5><i class="fa fa-instagram"></i><a href="instagram.com"> @eleventh_embodiment</a>
                 </h5>
             </div>
-            <div class="col-12 col-md-6 follow-heading">
+            <div class="col-12 col-md-12 col-lg-4 newsletter-heading">
+                <h4>Receive a FREE private session of your choice when you sign up for my newsletter!</h4>
+                <form><input class="newsletter-input" type="email" placeholder="Enter your e-mail">
+                    <button type="submit">Send</button>
+                </form>
+            </div>
+    
+            <div class="col-12 col-md-12 col-lg-4 follow-heading">
                 <h4>Follow Me:</h4>
                 <ul class="social-media">
                     <li>
