--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
     <div class="row kundalini">
         <div class="col-sm-12 col-md-6  col-lg-4 col-xl-2">
-            <img src="assets/images/yin.jpg" height="250" width="200" class="yoga-img" alt="A woman practicing yoga">
+            <img src="assets/images/yin.jpg" class="yoga-img img-fluid" alt="A woman practicing yoga">
         </div>
         <div class="col-12 col-sm-12 col-md-5 col-lg-7 col-xl-9 yoga-text">
             <h5>Kundalini Yoga</h5>
@@ -177,7 +177,7 @@
 
     <div class="row">
         <div class="col-12 col-md-6  col-lg-4 col-xl-2">
-            <img src="assets/images/feet.jpg" height="250" width="200" class="yoga-img"
+            <img src="assets/images/feet.jpg" class="yoga-img img-fluid"
                 alt="Feet of the people in yoga class">
         </div>
         <div class="col-12 col-md-5 col-lg-7 col-xl-9 yoga-text">
@@ -195,7 +195,7 @@
 
     <div class="row">
         <div class="col-12 col-md-6 d-lg-inline-block col-lg-4 col-xl-2">
-            <img src="assets/images/healing.jpg" height="250" width="200" class="yoga-img"
+            <img src="assets/images/healing.jpg" class="yoga-img img-fluid"
                 alt="A woman lying down while a reiki healer has his hands around her head">
         </div>
         <div class="col-12 col-md-5 col-lg-7 col-xl-9 yoga-text">
@@ -213,10 +213,10 @@
 
     <div class="row">
         <div class="col-12 col-md-6  col-lg-4 col-xl-2">
-            <img src="assets/images/breathe.png" height="250" width="200" class="yoga-img"
+            <img src="assets/images/breathe.png" class="yoga-img img-fluid"
                 alt="A woman with her eyes closed enjoying the breathwork ceremony">
         </div>
-        <div class="col-12 col-md-5 col-lg-7 col-xl-9 yoga-text">
+        <div class="col-12 col-md-5 col-lg-8 col-xl-8 yoga-text">
             <h5>Shamanic Breathwork</h5>
             <br />
             <p>
@@ -251,7 +251,7 @@
 
     <footer class="container-fluid">
         <div class="row">
-            <div class="col-12 col-md-6 col-lg-4 contact-heading">
+            <div class="col-12 col-md-12 col-lg-4 contact-heading">
                 <h4>Contact me:</h4>
                 <h5><i class="fa fa-envelope"></i><a href="contact.html"> harpreet@elem.com</a>
                 </h5>
@@ -260,14 +260,14 @@
                 <h5><i class="fa fa-instagram"></i><a href="instagram.com"> @eleventh_embodiment</a>
                 </h5>
             </div>
-            <div class="col-12 col-md-6 col-lg-4 newsletter-heading">
+            <div class="col-12 col-md-12 col-lg-4 newsletter-heading">
                 <h4>Receive a FREE private session of your choice when you sign up for my newsletter!</h4>
-                <form><input type="email" placeholder="Enter your e-mail">
-                      <button type="submit">Send</button>
+                <form><input class="newsletter-input" type="email" placeholder="Enter your e-mail">
+                      <button type="submit" >Send</button>
                 </form>
             </div>   
 
-            <div class="col-12 col-md-6 col-lg-4 follow-heading">
+            <div class="col-12 col-md-12 col-lg-4 follow-heading">
                 <h4>Follow Me:</h4>
                 <ul class="social-media">
                     <li>
