Update testing in README.md file

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 lowered stress levels.<br />
             </p>
             <!-- Code for button borrowed from stack overflow - Link in README.md file -->
-            <a class="btn yoga-btn" href="what-i-do.html">Learn More</a>
+            <a class="btn btn-secondary yoga-btn" href="what-i-do.html">Learn More</a>
         </div>
     </div>
 
@@ -189,7 +189,7 @@
                 other styles.<br />
             </p>
             <br />
-            <a class="btn yoga-btn" href="what-i-do.html">Learn More</a>
+            <a class="btn btn-secondary yoga-btn" href="what-i-do.html">Learn More</a>
         </div>
     </div>
 
@@ -207,7 +207,7 @@
                 effects that include relaxation and feelings of peace, security and wellbeing.
             </p>
             <br />
-            <a class="btn yoga-btn" href="what-i-do.html">Learn More</a>
+            <a class="btn btn-secondary yoga-btn" href="what-i-do.html">Learn More</a>
         </div>
     </div>
 
@@ -228,7 +228,7 @@
                 knows how
                 to heal and how to transform.
             </p>
-            <a class="btn yoga-btn" href="what-i-do.html">Learn More</a>
+            <a class="btn btn-secondary yoga-btn" href="what-i-do.html">Learn More</a>
         </div>
     </div>
     <!-- ================== End Methods I Use ======================================================================== -->
@@ -241,7 +241,7 @@
             <div class="col-12 col-md-11 col-lg-12 col-xl-12 online-session">
                 <h3 class="book-session-text">See Upcoming Events</h3>
                 <br />
-                <a class="btn btn-book" href="events.html">Browse Events</a>
+                <a class="btn btn-secondary btn-book" href="events.html">Browse Events</a>
                 <br />
             </div>
         </div>
@@ -263,7 +263,7 @@
             <div class="col-12 col-md-12 col-lg-4 newsletter-heading">
                 <h4>Receive a FREE private session of your choice when you sign up for my newsletter!</h4>
                 <form><input class="newsletter-input" type="email" placeholder="Enter your e-mail">
-                    <button type="submit">Send</button>
+                    <button class="btn-secondary" type="submit">Send</button>
                 </form>
             </div>
     
