--- a/what-i-do.html
+++ b/what-i-do.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+
+<!--<div class="body-background">-->
     <header>
         <!-- ==============Navigation Bar =============================================================== -->
 
@@ -72,7 +74,7 @@
             </div>
         </div>
     </div>
-    <a class="btn btn-advice" href="contact.html">Ask for Advice</a>
+    <a class="btn btn-secondary btn-advice" href="contact.html">Ask for Advice</a>
     <hr class="hr-large">
     <!-- ======================= End More info section =============================================================== -->
 
@@ -103,8 +105,8 @@
 
     <div class="container-fluid kundalini-container">
         <div class="row "> 
-            <div class="col-12 col-sm-10 col-md-10 col-lg-10 col-xl-10 kundalini-img">
-                <img class="img-fluid" src="assets/images/river.jpg" alt="A woman meditating beside the river" />
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12  ">
+                <img class="img-fluid kundalini-img" src="assets/images/river.jpg" alt="A woman meditating beside the river" />
             </div>
             <div class="col-12 col-sm-10 col-md-10 col-lg-10 col-xl-10 description-text">
                 <p>
@@ -433,6 +435,7 @@
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
     <!-- ======================= End Scripts ========================================================================== -->
+
 </body>
 
 </html>
