Update Testing in README.md file

--- a/events.html
+++ b/events.html
@@ -256,7 +256,7 @@
                 </h5>
                 <h5><i class="fa fa-phone"></i> +353 (0)85 833 5702
                 </h5>
-                <h5><i class="fa fa-instagram"></i><a href="instagram.com"> @eleventh_embodiment</a>
+                <h5><i class="fa fa-instagram"></i><a href="https://www.instagram.com" target="_blank"> @eleventh_embodiment</a>
                 </h5>
             </div>
             <div class="col-12 col-md-12 col-lg-4 newsletter-heading">
@@ -293,7 +293,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Create Account to Book a Workshop</h5>
+                    <h5 class="modal-title">Create Account to Book the Retreat or Workshop</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
