--- a/index.html
+++ b/index.html
@@ -257,13 +257,13 @@
                 </h5>
                 <h5><i class="fa fa-phone"></i> +353 (0)85 833 5702
                 </h5>
-                <h5><i class="fa fa-instagram"></i><a href="instagram.com"> @eleventh_embodiment</a>
+                <h5><i class="fa fa-instagram"></i><a href="https://www.instagram.com" target="_blank"> @eleventh_embodiment</a>
                 </h5>
             </div>
             <div class="col-12 col-md-12 col-lg-4 newsletter-heading">
                 <h4>Receive a FREE private session of your choice when you sign up for my newsletter!</h4>
                 <form><input class="newsletter-input" type="email" placeholder="Enter your e-mail">
-                    <button class="btn-secondary" type="submit">Send</button>
+                    <button type="submit">Send</button>
                 </form>
             </div>
     
