Update Readme file

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                         <label for="emailaddress" class="label-color"> Email Address </label>
                         <input type="email" name="email" id="emailaddress" class="form-control" required />
                         <label for="message" class="label-color"> Message</label>
-                        <textarea rows="5" name="message" id="message" class="form-control" required></textarea>
+                        <textarea rows="5" name="message" id="message" class="form-control" ></textarea>
                         <div class="form-row text-center">
                             <div class="col">
                                 <button type="submit" class="btn btn-secondary btn-form">
