--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                         <label for="emailaddress" class="label-color"> Email Address </label>
                         <input type="email" name="email" id="emailaddress" class="form-control" required />
                         <label for="message" class="label-color"> Message</label>
-                        <textarea rows="5" name="message" id="message" class="form-control" ></textarea>
+                        <textarea rows="5" name="message" id="message" class="form-control"></textarea>
                         <div class="form-row text-center">
                             <div class="col">
                                 <button type="submit" class="btn btn-secondary btn-form">
@@ -88,7 +88,8 @@
                 </h5>
                 <h5><i class="fa fa-phone"></i> +353 (0)85 833 5702
                 </h5>
-                <h5><i class="fa fa-instagram"></i><a href="https://www.instagram.com" target="_blank"> @eleventh_embodiment</a>
+                <h5><i class="fa fa-instagram"></i><a href="https://www.instagram.com" target="_blank">
+                        @eleventh_embodiment</a>
                 </h5>
             </div>
             <div class="col-12 col-md-12 col-lg-4 newsletter-heading">
@@ -97,7 +98,7 @@
                     <button type="submit">Send</button>
                 </form>
             </div>
-    
+
             <div class="col-12 col-md-12 col-lg-4 follow-heading">
                 <h4>Follow Me:</h4>
                 <ul class="social-media">
