--- a/events.html
+++ b/events.html
@@ -256,7 +256,8 @@
                 </h5>
                 <h5><i class="fa fa-phone"></i> +353 (0)85 833 5702
                 </h5>
-                <h5><i class="fa fa-instagram"></i><a href="https://www.instagram.com" target="_blank"> @eleventh_embodiment</a>
+                <h5><i class="fa fa-instagram"></i><a href="https://www.instagram.com" target="_blank">
+                        @eleventh_embodiment</a>
                 </h5>
             </div>
             <div class="col-12 col-md-12 col-lg-4 newsletter-heading">
@@ -265,7 +266,7 @@
                     <button type="submit">Send</button>
                 </form>
             </div>
-    
+
             <div class="col-12 col-md-12 col-lg-4 follow-heading">
                 <h4>Follow Me:</h4>
                 <ul class="social-media">
