--- a/index.html
+++ b/index.html
@@ -67,9 +67,6 @@
         </section>
     </div>
 
-
-
-
     <!-- ========================== My Story and Experience =================================================== -->
     <section class="container owner-container">
         <div class="row">
@@ -98,7 +95,7 @@
                     with, and facilitate, different healing arts (Reiki, Shamanic
                     Breathwork and Sound Healing)...<br /><br />
                     I look forward to meeting you <br /><br />
-                    Sat Nam 
+                    Sat Nam
                 </h5>
                 <br />
             </div>
@@ -177,8 +174,7 @@
 
     <div class="row">
         <div class="col-12 col-md-5  col-lg-4 col-xl-2">
-            <img src="assets/images/feet.jpg" class="yoga-img img-fluid"
-                alt="Feet of the people in yoga class">
+            <img src="assets/images/feet.jpg" class="yoga-img img-fluid" alt="Feet of the people in yoga class">
         </div>
         <div class="col-12 col-md-7 col-lg-7 col-xl-9 yoga-text">
             <h5>Yin Yoga</h5>
@@ -257,7 +253,8 @@
                 </h5>
                 <h5><i class="fa fa-phone"></i> +353 (0)85 833 5702
                 </h5>
-                <h5><i class="fa fa-instagram"></i><a href="https://www.instagram.com" target="_blank"> @eleventh_embodiment</a>
+                <h5><i class="fa fa-instagram"></i><a href="https://www.instagram.com" target="_blank">
+                        @eleventh_embodiment</a>
                 </h5>
             </div>
             <div class="col-12 col-md-12 col-lg-4 newsletter-heading">
@@ -266,7 +263,7 @@
                     <button type="submit">Send</button>
                 </form>
             </div>
-    
+
             <div class="col-12 col-md-12 col-lg-4 follow-heading">
                 <h4>Follow Me:</h4>
                 <ul class="social-media">
