Add noreferrer to external links as per lighthouse report4

--- a/events.html
+++ b/events.html
@@ -125,7 +125,7 @@
                 <h3><i class="fa fa-bed"></i> Accommodation:</h3>
                 <br />
                 <p>
-                    <a href="https://www.cubagoa.com/pages/our-properties/palolem-beach-resort" target="_blank">Palolem
+                    <a href="https://www.cubagoa.com/pages/our-properties/palolem-beach-resort" target="_blank" rel="noreferrer">Palolem
                         Beach Resort</a><br />
                     Check-in Time: 12:00 <br />
                     Check-out Time: 12:00 <br />
@@ -256,7 +256,7 @@
                 </h5>
                 <h5><i class="fa fa-phone"></i> +353 (0)85 833 5702
                 </h5>
-                <h5><i class="fa fa-instagram"></i><a href="https://www.instagram.com" target="_blank">
+                <h5><i class="fa fa-instagram"></i><a href="https://www.instagram.com" target="_blank" rel="noreferrer">
                         @eleventh_embodiment</a>
                 </h5>
             </div>
@@ -271,13 +271,13 @@
                 <h4>Follow Me:</h4>
                 <ul class="social-media">
                     <li>
-                        <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.facebook.com" target="_blank" rel="noreferrer"><i class="fa fa-facebook"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube"></i></a>
+                        <a href="https://www.youtube.com" target="_blank" rel="noreferrer"><i class="fa fa-youtube"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.instagram.com" target="_blank" rel="noreferrer"><i class="fa fa-instagram"></i></a>
                     </li>
                 </ul>
             </div>
