--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="Description" content="Alternative and Holistic Healing Website">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
@@ -80,10 +81,10 @@
             </div>
 
             <div class="col-xs-12 col-lg-6 owner-text">
-                <h5>
+                <h4>
                     Most people know me as Ana but as a Kundalini teacher I am proud to
                     carry the name Harpreet Seva Kaur.<br /><br />I began my yoga
-                    journey 6 yeas ago and have been blessed with many inspiring
+                    journey 6 years ago and have been blessed with many inspiring
                     teachers to support me on my path. I have been practicing Kundalini
                     yoga for the last 6 years and have supplemented my practice with
                     Hatha Raja, Tantra, Bhakti, Yin and other styles.<br /><br />
@@ -96,7 +97,7 @@
                     Breathwork and Sound Healing)...<br /><br />
                     I look forward to meeting you <br /><br />
                     Sat Nam
-                </h5>
+                </h4>
                 <br />
             </div>
         </div>
@@ -112,7 +113,7 @@
         <div class="row">
             <div class="col-12 col-md-6">
                 <div class="teacher-training">
-                    <h5>Teacher Training</h5>
+                    <h4>Teacher Training</h4>
                     <ul>
                         <li>
                             200 Hour Yoga Teacher Training Himalayan Yoga Bliss<br />
@@ -133,7 +134,7 @@
             </div>
             <div class="col-12 col-md-6">
                 <div class="teaching">
-                    <h5>Teaching</h5>
+                    <h4>Teaching</h4>
                     <ul>
                         <li>Online Yoga with Harpreet: March 2019-present</li>
                         <li>Little Bird Studio, Rishikesh: December 2018 - present</li>
@@ -253,7 +254,7 @@
                 </h5>
                 <h5><i class="fa fa-phone"></i> +353 (0)85 833 5702
                 </h5>
-                <h5><i class="fa fa-instagram"></i><a href="https://www.instagram.com" target="_blank">
+                <h5><i class="fa fa-instagram"></i><a href="https://www.instagram.com" target="_blank" rel="noreferrer">
                         @eleventh_embodiment</a>
                 </h5>
             </div>
@@ -268,13 +269,13 @@
                 <h4>Follow Me:</h4>
                 <ul class="social-media">
                     <li>
-                        <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.facebook.com" target="_blank" rel="noreferrer"><i class="fa fa-facebook"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube"></i></a>
+                        <a href="https://www.youtube.com" target="_blank" rel="noreferrer"><i class="fa fa-youtube"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.instagram.com" target="_blank" rel="noreferrer"><i class="fa fa-instagram"></i></a>
                     </li>
                 </ul>
             </div>
