--- a/what-i-do.html
+++ b/what-i-do.html
@@ -355,13 +355,15 @@
                 </h5>
                 <h5><i class="fa fa-phone"></i> +353 (0)85 833 5702
                 </h5>
-                <h5><i class="fa fa-instagram"></i><a href="https://www.instagram.com" target="_blank">
+                <h5><i class="fa fa-instagram"></i><a href="https://www.instagram.com" target="_blank" rel="noreferrer">
                         @eleventh_embodiment</a>
                 </h5>
             </div>
             <div class="col-12 col-md-12 col-lg-4 newsletter-heading">
-                <h4>Receive a FREE private session of your choice when you sign up for my newsletter!</h4>
-                <form><input class="newsletter-input" type="email" placeholder="Enter your e-mail">
+                
+                <form>
+                    <h4>Receive a FREE private session of your choice when you sign up for my newsletter!</h4>
+                    <input class="newsletter-input" type="email" placeholder="Enter your e-mail">
                     <button type="submit">Send</button>
                 </form>
             </div>
@@ -370,13 +372,13 @@
                 <h4>Follow Me:</h4>
                 <ul class="social-media">
                     <li>
-                        <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.facebook.com" target="_blank" rel="noreferrer"><i class="fa fa-facebook"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube"></i></a>
+                        <a href="https://www.youtube.com" target="_blank" rel="noreferrer"><i class="fa fa-youtube"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.instagram.com" target="_blank" rel="noreferrer"><i class="fa fa-instagram"></i></a>
                     </li>
                 </ul>
             </div>
