--- a/gallery.html
+++ b/gallery.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="Description" content="Alternative and Holistic Healing Website">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
@@ -54,70 +55,79 @@
 
     <!-- ==================== Images ================================================================== -->
 
-    <div class="container-fluid photos">
+  <div class="container-fluid photos">
         <div class="row">
             <div class="col-6 col-md-3">
-                <img src="assets/images/ana-class.jpg" alt="Yoga class on a rooftop" height="400" width="500" />
+                <img src="assets/images/ana-class.jpg" alt="Yoga class on a rooftop" />
             </div>
             <div class="col-6 col-md-3">
-                <img src="assets/images/session.jpg" class="img-fluid"
-                    alt="People sitting on the floor practicing yoga">
+                <img src="assets/images/session.jpg" class="img-fluid" alt="People sitting on the floor practicing yoga"/>
             </div>
             <div class="col-6 col-md-3">
-                <img src="assets/images/group.jpg" alt="People taking a group picture after a succesful yoga traning"
-                    height="500" width="650" />
+                <img src="assets/images/circle.jpg" alt="People taking a group picture after a succesful yoga traning" />
             </div>
             <div class="col-6 col-md-3">
-                <img src="assets/images/circle.jpg" alt="People standing in a circle" />
+                <img src="assets/images/group.jpg" alt="People standing in a circle" />
             </div>
             <div class="col-6 col-md-3">
-                <img src="assets/images/friends.png" alt="People lying on the floor laughing" />
+                <img src="assets/images/friends.jpg" alt="Three women leading a yoga class" />
             </div>
             <div class="col-6 col-md-3">
                 <img src="assets/images/girls.png" alt="Three girls dressed in white hugging" />
             </div>
             <div class="col-6 col-md-3">
-                <img src="assets/images/outside.jpg" alt="Group of people performing a yoga ceremony on the beach" />
+                <img src="assets/images/preparing.jpg" alt="Group of people performing a yoga ceremony on the beach" />
             </div>
             <div class="col-6 col-md-3">
-                <img src="assets/images/playing.png" alt="A woman sitting in nature playing an instrument" />
+                <img src="assets/images/outside.jpg" alt="A woman sitting in nature playing an instrument" />
             </div>
             <div class="col-6 col-md-3">
-                <img src="assets/images/dress.jpg" alt="A woman in a red dress" />
+                <img src="assets/images/bowl.jpg" alt="People dancing in yoga class" />
             </div>
             <div class="col-6 col-md-3">
-                <img src="assets/images/river.jpg" alt="A woman knealing beside the river" />
+                <img src="assets/images/dance.jpg" alt="People standing in a river with bowl of flowers" />
             </div>
             <div class="col-6 col-md-3">
-                <img src="assets/images/reiki.jpg" alt="A man lying down while a healer has her hands on his chest" />
+                <img src="assets/images/sitting.jpg" alt="People lying on the floor in yoga class" />
             </div>
             <div class="col-6 col-md-3">
-                <img src="assets/images/hand.jpg" alt="A woman holding a small crystal pyramid in her hand" />
+                <img src="assets/images/peace.jpg" alt="Two women hugging" />
             </div>
             <div class="col-6 col-md-3">
-                <img src="assets/images/pose1.jpg" alt="A woman in a standing yoga pose in front of a monument" />
+                <img src="assets/images/happy.jpg" alt="Picture on a mans arm during yoga class" />
             </div>
             <div class="col-6 col-md-3">
-                <img src="assets/images/pose.jpg" alt="A woman in nature in a standing yoga pose" />
+                <img src="assets/images/sleeping.jpg" alt="A man lying on the floor on a yoga mat" />
             </div>
             <div class="col-6 col-md-3">
-                <img src="assets/images/class.jpg" alt="People meditating in yoga class" />
+                <img src="assets/images/yin-class.jpg" alt="Women in a peaceful yoga pose" />
+            </div>
+            <div class="col-6 col-md-3">
+                <img src="assets/images/arm.jpg" alt="A woman sitting on a yoga mat" />
+            </div>
+            <div class="col-6 col-md-3">
+                <img src="assets/images/love.jpg" alt="A woman in red dress" />
+            </div>
+            <div class="col-6 col-md-3">
+                <img src="assets/images/pray.jpg" alt="A woman laughing in yoga class" />
+            </div>
+            <div class="col-6 col-md-3">
+                <img src="assets/images/dress.jpg" alt="A woman doing a cobra pose in nature" />
+            </div>
+            <div class="col-6 col-md-3">
+                <img src="assets/images/cobra.png" alt="A woman in white meditating" />
+            </div>
+             <div class="col-6 col-md-3">
+                <img src="assets/images/pose.jpg" alt="A woman in a standing yoga pose in front of a monument" />
+            </div>
+            <div class="col-6 col-md-3">
+                <img src="assets/images/pose1.jpg" alt="A woman in nature in a standing yoga pose" />
+            </div>
+            <div class="col-6 col-md-3">
+                <img src="assets/images/flowers.jpg" alt="People meditating in yoga class" />
             </div>
             <div class="col-6 col-md-3">
                 <img src="assets/images/nature.jpg" alt="A woman in a white dress with open arms" />
-            </div>
-            <div class="col-6 col-md-3">
-                <img src="assets/images/mountain1.jpg" alt="A woman sitting on a montain in a yoga pose" />
-            </div>
-            <div class="col-6 col-md-3">
-                <img src="assets/images/ana-bnw.jpg" alt="Black and white portrait of a woman" />
-            </div>
-            <div class="col-6 col-md-3">
-                <img src="assets/images/cobra.png" alt="A woman doing a cobra pose in nature" />
-            </div>
-            <div class="col-6 col-md-3">
-                <img src="assets/images/namaste.png" alt="A woman in red dress meditating" />
-            </div>
         </div>
     </div>
 
@@ -165,7 +175,7 @@
     <!-- ==================== End Footer ================================================================== -->
 
     <!-- ==================== Scripts ===================================================================== -->
-
+  
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -175,6 +185,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
+    
     <!-- ==================== End Scripts ================================================================== -->
 
 </body>
