Resize an image in gallery

--- a/gallery.html
+++ b/gallery.html
@@ -124,7 +124,7 @@
                 <img src="assets/images/pose1.jpg" alt="A woman in nature in a standing yoga pose" />
             </div>
             <div class="col-6 col-md-3">
-                <img src="assets/images/flowers.jpg" alt="People meditating in yoga class" />
+                <img src="assets/images/class.jpg" alt="People meditating in yoga class" />
             </div>
             <div class="col-6 col-md-3">
                 <img src="assets/images/nature.jpg" alt="A woman in a white dress with open arms" />
