Fix responsivenes on gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -57,76 +57,76 @@
 
   <div class="container-fluid photos">
         <div class="row">
-            <div class="col-6 col-md-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <img src="assets/images/ana-class.jpg" alt="Yoga class on a rooftop" />
             </div>
-            <div class="col-6 col-md-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <img src="assets/images/session.jpg" class="img-fluid" alt="People sitting on the floor practicing yoga"/>
             </div>
-            <div class="col-6 col-md-3">
-                <img src="assets/images/circle.jpg" alt="People taking a group picture after a succesful yoga traning" />
+            <div class="col-12 col-sm-6 col-md-4 d-md-none d-lg-block col-lg-3">
+                <img src="assets/images/circle.jpg" alt="People standing in a circle" />
             </div>
-            <div class="col-6 col-md-3">
-                <img src="assets/images/group.jpg" alt="People standing in a circle" />
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <img src="assets/images/group.jpg" alt="People taking a group picture after a succesful yoga traning" />
             </div>
-            <div class="col-6 col-md-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <img src="assets/images/friends.jpg" alt="Three women leading a yoga class" />
             </div>
-            <div class="col-6 col-md-3">
+            <div class="col-12 col-sm-6  col-md-4 col-lg-3">
                 <img src="assets/images/girls.png" alt="Three girls dressed in white hugging" />
             </div>
-            <div class="col-6 col-md-3">
-                <img src="assets/images/preparing.jpg" alt="Group of people performing a yoga ceremony on the beach" />
+            <div class="col-12 col-sm-6  col-md-4 col-lg-3">
+                <img src="assets/images/preparing.jpg" alt="People preparing a room for yoga class" />
             </div>
-            <div class="col-6 col-md-3">
-                <img src="assets/images/outside.jpg" alt="A woman sitting in nature playing an instrument" />
+            <div class="col-12 col-sm-6  col-md-4 d-md-none d-lg-block col-lg-3 col-lg-3">
+                <img src="assets/images/outside.jpg" alt="Group of people performing a yoga ceremony on the beach" />
             </div>
-            <div class="col-6 col-md-3">
-                <img src="assets/images/bowl.jpg" alt="People dancing in yoga class" />
+            <div class="col-12 col-sm-6  col-md-4 col-lg-3">
+                <img src="assets/images/bowl.jpg" alt="People standing in a river with bowl of flowers" />
             </div>
-            <div class="col-6 col-md-3">
-                <img src="assets/images/dance.jpg" alt="People standing in a river with bowl of flowers" />
+            <div class="col-12 col-sm-6  col-md-4 col-lg-3">
+                <img src="assets/images/dance.jpg" alt="People dancing in yoga class" />
             </div>
-            <div class="col-6 col-md-3">
-                <img src="assets/images/sitting.jpg" alt="People lying on the floor in yoga class" />
+            <div class="col-12 col-sm-6  col-md-4 col-lg-3">
+                <img src="assets/images/sitting.jpg" alt="A woman sitting on a yoga mat" />
             </div>
-            <div class="col-6 col-md-3">
-                <img src="assets/images/peace.jpg" alt="Two women hugging" />
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <img src="assets/images/peace.jpg" alt="Women in a peaceful yoga pose" />
             </div>
-            <div class="col-6 col-md-3">
-                <img src="assets/images/happy.jpg" alt="Picture on a mans arm during yoga class" />
+            <div class="col-12 col-sm-6  col-md-4 col-lg-3">
+                <img src="assets/images/happy.jpg" alt="A woman laughing in yoga class" />
             </div>
-            <div class="col-6 col-md-3">
+            <div class="col-12 col-sm-6  col-md-4 col-lg-3">
                 <img src="assets/images/sleeping.jpg" alt="A man lying on the floor on a yoga mat" />
             </div>
-            <div class="col-6 col-md-3">
-                <img src="assets/images/yin-class.jpg" alt="Women in a peaceful yoga pose" />
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <img src="assets/images/yin-class.jpg" alt="People lying on the floor in yoga class" />
             </div>
-            <div class="col-6 col-md-3">
-                <img src="assets/images/arm.jpg" alt="A woman sitting on a yoga mat" />
+            <div class="col-12 col-sm-6  col-md-4 col-lg-3">
+                <img src="assets/images/arm.jpg" alt="Picture on a mans arm during yoga class" />
             </div>
-            <div class="col-6 col-md-3">
-                <img src="assets/images/love.jpg" alt="A woman in red dress" />
+            <div class="col-12 col-sm-6  col-md-4 col-lg-3">
+                <img src="assets/images/love.jpg" alt="Two women hugging" />
             </div>
-            <div class="col-6 col-md-3">
-                <img src="assets/images/pray.jpg" alt="A woman laughing in yoga class" />
+            <div class="col-12 col-sm-6  col-md-4 col-lg-3">
+                <img src="assets/images/pray.jpg" alt="A woman in white praying" />
             </div>
-            <div class="col-6 col-md-3">
-                <img src="assets/images/dress.jpg" alt="A woman doing a cobra pose in nature" />
+            <div class="col-12 col-sm-6  col-md-4 col-lg-3">
+                <img src="assets/images/dress.jpg" alt="A woman in red dress" />
             </div>
-            <div class="col-6 col-md-3">
-                <img src="assets/images/cobra.png" alt="A woman in white meditating" />
+            <div class="col-12 col-sm-6  col-md-4 col-lg-3">
+                <img src="assets/images/cobra.png" alt="A woman doing a cobra pose in nature" />
             </div>
-             <div class="col-6 col-md-3">
+             <div class="col-12 col-sm-6  col-md-4 col-lg-3">
                 <img src="assets/images/pose.jpg" alt="A woman in a standing yoga pose in front of a monument" />
             </div>
-            <div class="col-6 col-md-3">
+            <div class="col-12 col-sm-6  col-md-4 col-lg-3">
                 <img src="assets/images/pose1.jpg" alt="A woman in nature in a standing yoga pose" />
             </div>
-            <div class="col-6 col-md-3">
+            <div class="col-12 col-sm-6  col-md-4 col-lg-3">
                 <img src="assets/images/class.jpg" alt="People meditating in yoga class" />
             </div>
-            <div class="col-6 col-md-3">
+            <div class="col-12 col-sm-6 col-md-4 d-md-none d-lg-block col-lg-3">
                 <img src="assets/images/nature.jpg" alt="A woman in a white dress with open arms" />
             </div>
         </div>
