--- a/events.html
+++ b/events.html
@@ -295,7 +295,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Create Account to Book the Retreat or Workshop</h5>
+                    <h5 class="modal-title">Create Account to Book a Retreat or Workshop</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
